[package]
name = "voxeltron-plugin-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Voxeltron Contributors"]
license = "Apache-2.0"
description = "SDK for building Voxeltron plugins in Rust"
repository = "https://github.com/deep-thinking-llc/voxeltron-sdk-rust"

[dependencies]
# Extism PDK for WASM plugins
extism-pdk = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

[features]
default = ["hooks"]
hooks = []
